[package]
name = "madara-orch-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
lazy_static = "1.4.0"
alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "68952c0", features = [
    "signers",
    "network",
    "providers",
    "rpc",
    "rpc-client",
    "consensus",
    "signer-wallet",
    "sol-types",
    "eips",
] }
c-kzg = "1.0.0"
eyre = "0.6.12"
tokio = { features = ["full"] }
dotenv = "0.15.0"
starknet = { version = "0.10.0" }
color-eyre = { version = "0.6.2" }
serde_json = "1.0.115"
num = "0.4.1"
majin-blob = "0.1.3"
majin-blob-core = "0.1.3"
majin-blob-types = "0.1.3"
num-bigint = "0.4.4"
